Remove unneeded scripts. Fix narrow-width username spacing. Fix rel reply link.

--- a/theme.less
+++ b/theme.less
@@ -1383,7 +1383,7 @@ pre code, code {
 /** Mobile topic view. */
 .author-user-name-hint {
   flex: 1 0 auto;
-  margin: 0 1rem;
+  margin: 1rem 1rem 0;
   font-size: 1.25rem;
   color: #ababab;
 }
@@ -1412,7 +1412,7 @@ pre code, code {
   }
 
   .topic .posts .rpg-box {
-    top: 0.5rem;
+    top: 0.7rem;
     border: 0;
     padding: 0;
     background: transparent;
@@ -1482,10 +1482,6 @@ pre code, code {
 
   .post-header {
     padding-bottom: 3rem;
-  }
-
-  .topic .posts .rpg-box {
-    top: 1rem;
   }
 }
 
